@@ -362,7 +362,7 @@ void ClientManager::setSimpleClientAttributes(Client* client, const ClientChange
         // do not simply copy the geometry to the attribute
         // but possibly apply the size hints:
         if (client->sizehints_floating_()) {
-            client->applysizehints(&geo.width, &geo.height);
+            client->applysizehints(&geo.width, &geo.height, true);
         }
         client->float_size_ = geo;
     }
