@@ -9,6 +9,8 @@ Current git version
 
   * New client attribute 'floating_effectively' and associated X11 properties
     'HLWM_FLOATING_WINDOW' and 'HLWM_TILING_WINDOW'
+  * Bug fixes:
+    - Update floating geometry if a client's size hints change
 
 Release 0.9.3 on 2021-05-15
 ---------------------------
